--- a/BackEnd/todo/pom.xml
+++ b/BackEnd/todo/pom.xml
@@ -50,6 +50,12 @@
 			<version>2.8.8</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.postgresql</groupId>-->
+<!--			<artifactId>postgresql</artifactId>-->
+<!--			<scope>runtime</scope>-->
+<!--		</dependency>-->
+
 
 
 	</dependencies>
