--- a/BackEnd/todo/src/main/resources/application.properties
+++ b/BackEnd/todo/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 spring.application.name=todoDimcho
 
+# database
+spring.datasource.url=jdbc:postgresql://localhost:5432/todoapp
+spring.datasource.username=eww
+spring.datasource.password=eww
+
+# repository
+spring.jpa.hibernate.ddl-auto=update
+
+# api documentation
+springdoc.api-docs.path=/api
+springdoc.swagger-ui.path=/swagger.html
+
 
 
